--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include README
 recursive-include image_editor/static *
 recursive-include image_editor/templates *
+recursive-include image_editor/filters *
