--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ include README
 recursive-include image_editor/static *
 recursive-include image_editor/templates *
 recursive-include image_editor/filters *
+recursive-include image_editor/management *
